--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,10 @@
   "dependencies": {
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-scripts": "0.9.x"
+    "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "0.9.x",
+    "redux": "^3.7.2"
   },
   "devDependencies": {},
   "scripts": {
